<resources>
    <string name="app_name">WalkingTheDog</string>
    <string name="action_settings">Settings</string>
    <string name="pet_id" translatable="false">addUpdate</string>
    <string name="default_dog" translatable="false">defDog</string>
    <string name="default_walks_dog" translatable="false">defWlkDg</string>
    <string name="add_dog_item">Add a Dog</string>
    <string name="view_dogs_item">View/Edit Dogs</string>
    <string name="api">AIzaSyAVLjqx2Jjm2H9mrVz8UmW92sGJc9cKry4</string>
    <string name="dogs_on_walk">dgsOnWlk</string>

    <!--Add Pet Strings-->
    <string name="add_pet_title">Please Add A Dog!</string>
    <string name="update_pet_title">Update Dog!</string>
    <string name="add_dog_name">Name</string>
    <string name="goals">Per Day Goals:</string>
    <string name="num_walks_goal">Walks</string>
    <string name="time_text">Time in Minutes</string>
    <string name="dist_text">Distance in Miles</string>
    <string name="add_button_text">Add</string>
    <string name="update_button_text">Update</string>
    <string name="missing_data">Missing Data</string>
    <string name="delete_dog">Take</string>
    <string name="delete_dog_fail">Couldn\'t take</string>
    <string name="farm">to the farm</string>
    <string name="def_dog">Make this your default dog?</string>
    <string name="auto_walk">Automatically include this dog on new walks?</string>
    <string name="add_profile_picture">Take Profile Picture</string>
    <string name="online_id">Generate Shareable ID</string>
    <string name="create_new_dog">Create New Dog</string>
    <string name="import_shared_dog">Import Shared Dog</string>
    <string name="instructions">To import a dog the user that created the dog must generate a six digit sharable ID from their edit dog page. Enter that ID in the field below and hit the "Check ID" button to find them. If you find your dog use the "Import Shared Dog" button to save them.</string>
    <string name="or">~ Or ~</string>
    <string name="shared_id_hint">Shareable ID</string>
    <string name="bad_ID">ID not valid please double ID check and try again.</string>
    <string name="found_dog_import">Do you wish to import </string>
    <string name="already_have_dog">You already have this dog on your device.</string>
    <string name="check_id">Check ID</string>

    <!--Main Activity Strings-->
    <string name="main_pet_name">\'s Progress</string>
    <string name="streak">Streak</string>
    <string name="td_goals">Today\'s Goals</string>
    <string name="walks">Walks</string>
    <string name="time">Time</string>
    <string name="dist">Distance</string>
    <string name="life_time_stats">Life Time Stats</string>
    <string name="best_walks">Best Walks in a Day</string>
    <string name="best_time">Best Time in a Day</string>
    <string name="best_dist">Best Distance in a Day</string>
    <string name="best_time_wk">Best Time in a Walk</string>
    <string name="best_dist_wk">Best Distance in a Walk</string>
    <string name="best_streak">Best Streak</string>
    <string name="ave_time_walk">Average Time per Walk</string>
    <string name="ave_dist_walk">Average Miles per Walk</string>
    <string name="ave_walk_day">Average Walks per Day</string>
    <string name="ave_time_day">Average Time per Day</string>
    <string name="ave_dist_day">Average Miles per Day</string>
    <string name="ave_mph">Average Miles per Hour</string>
    <string name="edit_goals_button">Edit Goals</string>

    <!--Track Walk Strings-->
    <string name="tw_walk_time">Time</string>
    <string name="tw_walk_distance">Miles</string>
    <string name="tw_dog_goals">Dog Goal Progress Remaining</string>
    <string name="dog">Dog</string>
    <string name="tw_walks_left">Walks</string>
    <string name="tw_time_left">Time</string>
    <string name="tw_dist_left">Miles</string>
    <string name="tw_need_one_pet">At least one dog is needed on the walk</string>
    <string name="end_walk_button">End walk</string>
    <string name="change_dogs_on_walk">Change dogs</string>
    <string name="notification_title">Currently on a Walk</string>
    <string name="notification_text">Are you still walking your dog?</string>


    <!-- Ads -->
    <string name="main_activity_ad_banner" translatable="false">ca-app-pub-9578879157437430/3257869302</string>
    <string name="adMob_app_id" translatable="false">ca-app-pub-9578879157437430~1781136107</string>
    <string name="track_walk_ad_banner" translatable="false">ca-app-pub-9578879157437430/7688068903</string>
</resources>
