<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_pet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="online.cagocapps.walkingthedog.AddPet"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_title"
        android:text="@string/add_pet_title"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_dog_name"
        android:id="@+id/edit_name"
        android:textAlignment="center"
        android:background="@drawable/edittextstyle"
        android:layout_weight="0.10" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/per_day_goals"
        android:text="@string/goals"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_walks_goal"
        android:id="@+id/et_walks_goals"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="@drawable/edittextstyle"
        android:layout_weight="0.08"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_text"
        android:id="@+id/et_time_goals"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="@drawable/edittextstyle"
        android:layout_weight="0.08"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dist_text"
        android:id="@+id/et_dist_goals"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="@drawable/edittextstyle"
        android:layout_weight="0.08"
        android:inputType="number"/>

    <CheckBox
        android:text="@string/def_dog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/default_dog" />

    <CheckBox
        android:text="@string/auto_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoOnWalk" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/stockdog"
            android:id="@+id/profile_picture"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toRightOf="@+id/profile_picture"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_picture"
            android:id="@+id/take_photo_button"
            android:text="@string/add_profile_picture"
            android:onClick="takeProfilePicture"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addDog"
        android:text="@string/add_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
        android:layout_weight="0.04" />
    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="100dp"
        android:background="#8B0000"
        android:onClick="deleteDog"
        android:text="@string/delete_dog"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
        android:layout_weight="0.04" />


</LinearLayout>
